# aegis-cpm

./: CMakeLists.txt  LICENSE.md  README.md  formulaSheet.md
data/conf/: .test.json
include/cpm/: action.h  actionReg.h  actionStore.h  app.h  frame.h  frameMap.h  ioframe.h  iokey.h  material.h  materialStore.h
include/cpm/bActions/: quit.h
src/: CMakeLists.txt  main.cpp
src/action/: action.cpp  actionReg.cpp  actionStore.cpp  iokey.cpp  iokey.h
src/app/: app.cpp  frameMap.cpp  graphics.cpp  graphics.h  texpack.cpp  texpack.h
src/bActions/: quit.cpp
src/ioframe/: ioframe.cpp
src/materials/: baseMaterials.cpp  material.cpp  materialStore.cpp
src/model/: beam.cpp  beam.h  frame.cpp  joint.cpp  joint.h  structure.cpp
src/ui/: frameMap.cpp
